# WiDSIrelandLab2026

./: .gitignore  .pyrightconfig.json  LICENSE  README.md  WiDS_Comp_2026.ipynb  main.py  pyproject.toml
ai_approach/: README.md
ai_approach/data/: feature_importance.csv  model_metadata.json  submission.csv
ai_approach/docs/: improvement_plan.md  original_raw_description.txt  wids_notebook_comparison.html  wids_presentation.html
data/: X_test_engineered.csv  X_train_engineered.csv  feature_engineering_summary.csv  feature_importance.csv  feature_summary_stats.csv  model_metadata.json  selected_features.csv  submission.csv  y_train.csv
models/: feature_scaler.pkl
notebooks/: 01_eda.ipynb  02_visualisation.ipynb  03_feature_engineering.ipynb  04_modelling_and_evaluation.ipynb
