[project]
name = "widsirelandlab2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.10.0",
    "jupyter-black>=0.4.0",
    "jupyterlab>=4.5.6",
    "lifelines>=0.29.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scikit-survival>=0.23.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
